Update lists at 20240805-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -299,7 +300,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -532,7 +532,6 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -639,7 +638,6 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
-allow 194.164.96.49;
 allow 194.26.192.161;
 allow 194.26.192.77;
 allow 194.48.248.130;
@@ -1058,6 +1056,7 @@ allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
+allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -1088,6 +1087,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
+allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -1372,7 +1372,6 @@ allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3e::c0cc:82;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
@@ -1437,7 +1436,6 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -1694,6 +1692,7 @@ allow 2a0e:fa00:0:1b::1;
 allow 2a0f:5f40:1000:435::8f;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:89c::1;
 allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1722,13 +1721,13 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
+allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
-allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
+allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
@@ -1760,7 +1759,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.218.218.123;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1801,7 +1799,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.150.108.229;
 allow 45.151.122.34;
-allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1888,8 +1885,10 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.209.65.112;
 allow 5.42.80.232;
 allow 5.42.80.233;
+allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
@@ -1974,7 +1973,6 @@ allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 87.120.254.192;
 allow 88.209.197.213;
 allow 88.80.20.86;
@@ -1998,6 +1996,7 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 89.58.41.251;
 allow 89.58.63.200;
+allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.193.18.63;
 allow 91.202.5.104;
@@ -2054,7 +2053,6 @@ allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
-allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
