--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -487,6 +487,7 @@ set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 set_real_ip_from 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:94e0:2421:dead::1;
 set_real_ip_from 2a03:94e0:242c:dead::1;
 set_real_ip_from 2a03:94e0:243a:dead::1;
@@ -774,11 +775,13 @@ set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
+set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c051::2;
 set_real_ip_from 2a12:5940:c826::2;
+set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
