--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -243,6 +243,7 @@ allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
+allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -774,9 +775,7 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
-allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
-allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
