Update lists at 20240805-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -339,7 +339,18 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
+allow 185.220.101.100;
+allow 185.220.101.101;
+allow 185.220.101.102;
+allow 185.220.101.103;
+allow 185.220.101.104;
+allow 185.220.101.105;
+allow 185.220.101.106;
+allow 185.220.101.107;
+allow 185.220.101.108;
+allow 185.220.101.109;
 allow 185.220.101.11;
+allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.13;
@@ -478,6 +489,10 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
+allow 185.220.101.96;
+allow 185.220.101.97;
+allow 185.220.101.98;
+allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -1216,7 +1231,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:f130:0:10d::64;
 allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
@@ -1398,6 +1412,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
+allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
@@ -1680,6 +1695,21 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
+allow 2a0b:f4c2:4::98;
+allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1723,14 +1753,12 @@ allow 2a10:1fc0:1::e016:2586;
 allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:1fc0:d::9c5b:b08e;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
-allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
@@ -1766,6 +1794,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.206.153.26;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1837,6 +1866,7 @@ allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.36.38.151;
@@ -1890,12 +1920,10 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.70.16.40;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
@@ -1922,7 +1950,6 @@ allow 71.19.144.106;
 allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
-allow 74.48.108.229;
 allow 74.82.47.194;
 allow 77.220.196.253;
 allow 77.221.152.105;
@@ -1957,7 +1984,6 @@ allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
-allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -1975,7 +2001,6 @@ allow 85.204.116.93;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
-allow 86.104.194.27;
 allow 86.104.75.99;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -2021,7 +2046,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
-allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.227.77.199;
