--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -339,7 +339,18 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
+deny 185.220.101.100;
+deny 185.220.101.101;
+deny 185.220.101.102;
+deny 185.220.101.103;
+deny 185.220.101.104;
+deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
+deny 185.220.101.108;
+deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.128;
 deny 185.220.101.13;
@@ -478,6 +489,10 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
+deny 185.220.101.96;
+deny 185.220.101.97;
+deny 185.220.101.98;
+deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -1216,7 +1231,6 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:f130:0:10d::64;
 deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
@@ -1398,6 +1412,7 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:25b0:aaaa:5258::;
+deny 2a02:2970:1001::4b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
@@ -1680,6 +1695,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1723,14 +1753,12 @@ deny 2a10:1fc0:1::e016:2586;
 deny 2a10:1fc0:d::7384:5a63;
 deny 2a10:1fc0:d::9c5b:b08e;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
-deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
@@ -1766,6 +1794,7 @@ deny 37.46.211.24;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 44.206.153.26;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1837,6 +1866,7 @@ deny 45.95.169.229;
 deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.36.38.151;
@@ -1890,12 +1920,10 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
-deny 52.70.16.40;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
 deny 5.42.80.235;
@@ -1922,7 +1950,6 @@ deny 71.19.144.106;
 deny 71.19.144.222;
 deny 72.14.179.10;
 deny 72.211.49.235;
-deny 74.48.108.229;
 deny 74.82.47.194;
 deny 77.220.196.253;
 deny 77.221.152.105;
@@ -1957,7 +1984,6 @@ deny 81.17.20.60;
 deny 81.17.28.95;
 deny 82.118.242.36;
 deny 82.153.138.119;
-deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
@@ -1975,7 +2001,6 @@ deny 85.204.116.93;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
-deny 86.104.194.27;
 deny 86.104.75.99;
 deny 87.118.110.27;
 deny 87.118.116.103;
@@ -2021,7 +2046,6 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
 deny 91.219.236.101;
-deny 91.219.237.39;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.227.77.199;
