--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -265,7 +265,6 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:f130:0:10d::64;
 deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
@@ -446,6 +445,7 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:25b0:aaaa:5258::;
+deny 2a02:2970:1001::4b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
@@ -728,6 +728,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -771,14 +786,12 @@ deny 2a10:1fc0:1::e016:2586;
 deny 2a10:1fc0:d::7384:5a63;
 deny 2a10:1fc0:d::9c5b:b08e;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
-deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
