Update lists at 20240805-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -265,6 +265,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:f130:0:10d::64;
 deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
@@ -423,6 +424,7 @@ deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3e::c0cc:82;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:19a0:3:d0:0:252e:d06d:1;
 deny 2a00:19a0:3:d3:0:252e:d315:1;
 deny 2a00:19a0:3:d3:0:252e:d317:1;
@@ -792,6 +794,7 @@ deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
+deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
