--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -302,6 +303,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1231,6 +1233,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:f130:0:10d::64;
 set_real_ip_from 2620:18c:0:192::131;
 set_real_ip_from 2620:18c:0:192::132;
 set_real_ip_from 2620:18c:0:192::133;
@@ -1390,6 +1393,7 @@ set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3e::c0cc:82;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:19a0:3:d0:0:252e:d06d:1;
 set_real_ip_from 2a00:19a0:3:d3:0:252e:d315:1;
 set_real_ip_from 2a00:19a0:3:d3:0:252e:d317:1;
@@ -1759,6 +1763,7 @@ set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
+set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c051::2;
 set_real_ip_from 2a12:5940:c826::2;
@@ -1773,6 +1778,7 @@ set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.202.180.216;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1794,7 +1800,6 @@ set_real_ip_from 37.46.211.24;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.206.153.26;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1890,13 +1895,15 @@ set_real_ip_from 51.81.254.15;
 set_real_ip_from 51.81.254.3;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.182.86.212;
+set_real_ip_from 51.83.40.211;
+set_real_ip_from 51.89.145.143;
+set_real_ip_from 51.89.145.146;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1924,6 +1931,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
@@ -1931,6 +1939,7 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.209.253;
 set_real_ip_from 54.36.209.254;
+set_real_ip_from 54.38.74.118;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1950,6 +1959,7 @@ set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
+set_real_ip_from 74.48.108.229;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.152.105;
@@ -2007,6 +2017,7 @@ set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.120.254.192;
 set_real_ip_from 88.209.197.213;
 set_real_ip_from 88.80.20.86;
