--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -302,6 +303,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1231,6 +1233,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:f130:0:10d::64;
 allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
@@ -1390,6 +1393,7 @@ allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3e::c0cc:82;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
@@ -1759,6 +1763,7 @@ allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
+allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
@@ -1773,6 +1778,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.202.180.216;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1794,7 +1800,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.206.153.26;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1890,13 +1895,15 @@ allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
 allow 5.182.86.212;
+allow 51.83.40.211;
+allow 51.89.145.143;
+allow 51.89.145.146;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1924,6 +1931,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
@@ -1931,6 +1939,7 @@ allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
 allow 54.36.209.254;
+allow 54.38.74.118;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1950,6 +1959,7 @@ allow 71.19.144.106;
 allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
+allow 74.48.108.229;
 allow 74.82.47.194;
 allow 77.220.196.253;
 allow 77.221.152.105;
@@ -2007,6 +2017,7 @@ allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 87.120.254.192;
 allow 88.209.197.213;
 allow 88.80.20.86;
