--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -41,7 +41,6 @@ allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.189.10.175;
 allow 107.189.11.111;
-allow 107.189.11.113;
 allow 107.189.1.160;
 allow 107.189.1.167;
 allow 107.189.1.175;
@@ -123,7 +122,6 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -274,7 +272,6 @@ allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
 allow 185.107.70.56;
-allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.126.117.21;
@@ -522,11 +519,7 @@ allow 185.243.218.110;
 allow 185.243.218.202;
 allow 185.243.218.204;
 allow 185.243.218.35;
-allow 185.243.218.41;
-allow 185.243.218.46;
-allow 185.243.218.61;
 allow 185.243.218.89;
-allow 185.243.218.95;
 allow 185.243.23.81;
 allow 185.244.192.175;
 allow 185.244.192.184;
@@ -645,7 +638,6 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.173;
 allow 193.218.118.178;
-allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
@@ -1075,7 +1067,6 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1206,7 +1197,6 @@ allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
-allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1219,7 +1209,6 @@ allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
-allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
@@ -1464,14 +1453,6 @@ allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
 allow 2a03:94e0:24a1:dead::1;
-allow 2a03:94e0:24d4::2;
-allow 2a03:94e0:24d4::3;
-allow 2a03:94e0:24d4::4;
-allow 2a03:94e0:24d4::5;
-allow 2a03:94e0:24d4::6;
-allow 2a03:94e0:24d4::7;
-allow 2a03:94e0:24d4::8;
-allow 2a03:94e0:24d4::9;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
@@ -1479,8 +1460,6 @@ allow 2a03:94e0:ffff:185:243:218:0:110;
 allow 2a03:94e0:ffff:185:243:218:0:202;
 allow 2a03:94e0:ffff:185:243:218:0:204;
 allow 2a03:94e0:ffff:185:243:218:0:35;
-allow 2a03:94e0:ffff:185:243:218:0:41;
-allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
 allow 2a03:94e0:ffff:195:16:73:0:134;
 allow 2a03:e600:100::1;
@@ -1508,6 +1487,7 @@ allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1719,7 +1699,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3ea:372::1;
@@ -1747,7 +1726,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1778,8 +1756,8 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.202.180.216;
 allow 35.0.127.52;
+allow 35.170.118.232;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1838,12 +1816,12 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
+allow 45.148.10.169;
 allow 45.150.108.229;
 allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
-allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1907,6 +1885,7 @@ allow 5.255.100.224;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
@@ -1930,7 +1909,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 5.34.182.203;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -2008,7 +1986,6 @@ allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 86.104.75.99;
