--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -238,7 +238,6 @@ deny 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 deny 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
-deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -251,7 +250,6 @@ deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
-deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:6400:d814:2775::;
@@ -495,14 +493,6 @@ deny 2a03:94e0:2421:dead::1;
 deny 2a03:94e0:242c:dead::1;
 deny 2a03:94e0:243a:dead::1;
 deny 2a03:94e0:24a1:dead::1;
-deny 2a03:94e0:24d4::2;
-deny 2a03:94e0:24d4::3;
-deny 2a03:94e0:24d4::4;
-deny 2a03:94e0:24d4::5;
-deny 2a03:94e0:24d4::6;
-deny 2a03:94e0:24d4::7;
-deny 2a03:94e0:24d4::8;
-deny 2a03:94e0:24d4::9;
 deny 2a03:94e0:2660:4819:623:8331:4852:1;
 deny 2a03:94e0:ffff:185:181:61:0:115;
 deny 2a03:94e0:ffff:185:181:61:0:142;
@@ -510,8 +500,6 @@ deny 2a03:94e0:ffff:185:243:218:0:110;
 deny 2a03:94e0:ffff:185:243:218:0:202;
 deny 2a03:94e0:ffff:185:243:218:0:204;
 deny 2a03:94e0:ffff:185:243:218:0:35;
-deny 2a03:94e0:ffff:185:243:218:0:41;
-deny 2a03:94e0:ffff:185:243:218:0:46;
 deny 2a03:94e0:ffff:185:243:218:0:89;
 deny 2a03:94e0:ffff:195:16:73:0:134;
 deny 2a03:e600:100::1;
@@ -539,6 +527,7 @@ deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
+deny 2a04:52c0:113:2b92::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -750,7 +739,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3ea:372::1;
@@ -778,7 +766,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
-deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
