Update lists at 20240807-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,10 +1,8 @@
-allow 100.29.56.229;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 103.109.101.105;
 allow 103.126.161.54;
-allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
 allow 103.193.179.233;
@@ -126,7 +124,6 @@ allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
-allow 134.255.218.195;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -251,6 +248,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 181.41.143.240;
+allow 18.210.161.127;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -725,6 +723,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1704,6 +1703,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
@@ -1894,6 +1894,7 @@ allow 5.255.104.202;
 allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
+allow 5.255.115.143;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
@@ -1980,7 +1981,7 @@ allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
+allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
@@ -2049,6 +2050,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 91.92.241.22;
 allow 92.133.238.108;
+allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
