Update lists at 20240808-0300

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -170,7 +170,6 @@ deny 154.64.224.27;
 deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
-deny 162.19.230.94;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -638,6 +637,7 @@ deny 193.218.118.133;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
 deny 193.26.115.43;
@@ -1069,7 +1069,6 @@ deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
 deny 23.155.8.104;
-deny 23.20.170.108;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -1732,6 +1731,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1760,6 +1760,7 @@ deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.134;
+deny 34.236.221.173;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1887,6 +1888,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
