--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -170,7 +170,6 @@ allow 154.64.224.27;
 allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
-allow 162.19.230.94;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -638,6 +637,7 @@ allow 193.218.118.133;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.26.115.43;
@@ -1069,7 +1069,6 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.20.170.108;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1732,6 +1731,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1760,6 +1760,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.236.221.173;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1887,6 +1888,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
