Update lists at 20240808-0900

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -146,7 +146,6 @@ set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.164.210;
 set_real_ip_from 146.70.81.186;
-set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.49.17;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 148.113.152.91;
@@ -948,6 +947,7 @@ set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.46.203;
+set_real_ip_from 209.141.50.178;
 set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
@@ -1141,6 +1141,7 @@ set_real_ip_from 2605:6400:10:7ce:1211:2284:56a3:1121;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
+set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
@@ -1778,6 +1779,7 @@ set_real_ip_from 37.46.211.24;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.217.180.240;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -2088,7 +2090,6 @@ set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.126.98.146;
