--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -164,7 +164,6 @@ allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
-allow 2605:6400:10:255::1;
 allow 2605:6400:10:3f9:116c:94a1:a862:dfec;
 allow 2605:6400:10:3f9:2fb4:3d9c:a1bc:73a3;
 allow 2605:6400:10:3f9:42af:65de:583f:49f1;
@@ -491,13 +490,11 @@ allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
-allow 2a03:94e0:24a1:dead::1;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:243:218:0:110;
 allow 2a03:94e0:ffff:185:243:218:0:202;
-allow 2a03:94e0:ffff:185:243:218:0:204;
 allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:89;
 allow 2a03:94e0:ffff:195:16:73:0:134;
@@ -567,6 +564,7 @@ allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 allow 2a0a:3840:8078:27:0:504e:1b42:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
