Update lists at 20240809-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -171,7 +171,6 @@ allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1085,7 +1084,6 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1495,6 +1493,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:27:0:504e:1b42:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1850,6 +1849,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1878,6 +1878,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.146.49.82;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1890,12 +1891,10 @@ allow 54.38.74.118;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.86.219.214;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
-allow 62.182.84.146;
 allow 64.226.89.91;
 allow 64.227.115.78;
 allow 64.227.159.148;
@@ -1951,6 +1950,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
