--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -138,7 +138,6 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -547,6 +546,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:27:0:504e:1b42:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
