--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -171,7 +171,6 @@ deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
-deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -1085,7 +1084,6 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -1495,6 +1493,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
+deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:3840:8078:27:0:504e:1b42:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1850,6 +1849,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1878,6 +1878,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 54.146.49.82;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1890,12 +1891,10 @@ deny 54.38.74.118;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.86.219.214;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.83.179;
-deny 62.182.84.146;
 deny 64.226.89.91;
 deny 64.227.115.78;
 deny 64.227.159.148;
@@ -1951,6 +1950,7 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
+deny 84.252.120.163;
 deny 85.17.9.83;
 deny 85.204.116.92;
 deny 85.204.116.93;
