--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -171,7 +171,6 @@ set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
-set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -1085,7 +1084,6 @@ set_real_ip_from 2602:fc24:19:eb06::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
-set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
@@ -1495,6 +1493,7 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
+set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 set_real_ip_from 2a0a:3840:8078:27:0:504e:1b42:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1850,6 +1849,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1878,6 +1878,7 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.146.49.82;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1890,12 +1891,10 @@ set_real_ip_from 54.38.74.118;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.86.219.214;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.226.89.91;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.227.159.148;
@@ -1951,6 +1950,7 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
+set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.92;
 set_real_ip_from 85.204.116.93;
