Update lists at 20240809-0600

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -131,7 +131,6 @@ deny 139.162.249.209;
 deny 139.99.172.11;
 deny 139.99.184.245;
 deny 139.99.8.57;
-deny 141.239.146.142;
 deny 141.95.59.93;
 deny 141.98.11.62;
 deny 141.98.119.106;
@@ -171,6 +170,7 @@ deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
+deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -1084,6 +1084,7 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -1452,7 +1453,6 @@ deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
-deny 2a04:52c0:113:2b92::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1853,7 +1853,6 @@ deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
-deny 5.255.108.103;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.143;
@@ -1878,7 +1877,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.146.49.82;
+deny 54.208.132.168;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1895,6 +1894,7 @@ deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.83.179;
+deny 62.182.84.146;
 deny 64.226.89.91;
 deny 64.227.115.78;
 deny 64.227.159.148;
