--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -131,7 +131,6 @@ allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
-allow 141.239.146.142;
 allow 141.95.59.93;
 allow 141.98.11.62;
 allow 141.98.119.106;
@@ -171,6 +170,7 @@ allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1084,6 +1084,7 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1452,7 +1453,6 @@ allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
-allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1853,7 +1853,6 @@ allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
-allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.143;
@@ -1878,7 +1877,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.146.49.82;
+allow 54.208.132.168;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1895,6 +1894,7 @@ allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
+allow 62.182.84.146;
 allow 64.226.89.91;
 allow 64.227.115.78;
 allow 64.227.159.148;
