--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -138,6 +138,7 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -505,7 +506,6 @@ deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
-deny 2a04:52c0:113:2b92::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
